# ag-ui-tests

./: .gitignore  README.md
client/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ChatMessage.tsx  ReasoningStep.tsx  StepIndicator.tsx  ToolCall.tsx
client/src/store/: chatStore.tsx  types.ts
server/: README.md  pyproject.toml  server.py  tools.py
